refactor: docs AppointmentController to yaml
